feat: added api resources